@@ -64,14 +64,13 @@ class TestControlCommands(unittest.TestCase):
         child.sendline(':enable local\t')
         child.expect('waiting \(1/1\)> ')
         child.sendline(':list')
-        child.expect('1 active shells, 0 dead shells, total: 1')
+        child.expect('localhost enabled running:')
         child.expect('waiting \(1/1\)> ')
         child.sendline(':list local\t')
-        child.expect('1 active shells, 0 dead shells, total: 1')
+        child.expect('localhost enabled running:')
         child.expect('waiting \(1/1\)> ')
         child.sendline(':list unknown')
         child.expect('unknown not found')
-        child.expect('0 active shells, 0 dead shells, total: 0')
         child.expect('waiting \(1/1\)> ')
         child.sendline(':send_ctrl c')
         child.expect('ready \(1\)> ')
@@ -240,7 +239,9 @@ localhost: appended to the log
         child.sendline(':pur\t\t')
         child.expect('ready \(2\)> ')
         child.sendline(':list')
-        child.expect('total: 2')
+        child.expect('localhost#1 enabled idle:')
+        child.expect('localhost#2 enabled idle:')
+        child.expect('ready \(2\)> ')
         child.sendeof()
         child.expect(pexpect.EOF)
 
